--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>ES_APP</title>
   </head>
+
   <body>
-    <img src="images/Logo_ES.jpeg" alt="None" />
-    <p>Just a test with our incredible Logo</p>
-    <p class="Branch">Testing Branches</p>
+    <div class="about-menu">
+      <img class="logo" src="images/Logo_ES.jpeg" alt="ERROR" />
+    </div>
+    <div class="first-sensor"></div>
+    <div class="second-sensor"></div>
+    <div class="third-sensor"></div>
+    <div class="forth sensor"></div>
   </body>
 </html>
