--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>ES_APP</title>
-  </head>
-
-  <body>
-    <div class="about-menu">
-      <img class="logo" src="images/Logo_ES.jpeg" alt="ERROR" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <script src="./index.js"></script>
+    <title>ES App</title>
+</head>
+<body >
+    <nav class="main-menu">
+        <img src="./images/menu-icon-mobile-21.jpg" alt="Team M logo" class="burguer-button">
+        <ul class="menu-list">
+            <li>Sensors</li>
+            <li>Gps</li>
+            <li>About us</li>
+            
+        </ul>
+    </nav>
+    <div class="sensor-showcase">
+        <div class="sensor-container">
+            <h1 class="sensor-name">Nome</h1>
+            <div class="circle-container">
+                <p class="data">Data</p>
+            </div>
+            <h4>Timestamp</h4>
+        </div>
+        <div class="sensor-container">
+            <h1 class="sensor-name"> Nome</h1>
+            <div class="circle-container">
+                <p class="data">Data</p>
+            </div>
+            <h4>Timestamp</h4>
+        </div>
+        <div class="sensor-container">
+            <h1 class="sensor-name">Nome</h1>
+            <div class="circle-container">
+                <p class="data">Data</p>
+            </div>
+            <h4>Timestamp</h4>
+        </div>
+        <div class="sensor-container">
+            <h1 class="sensor-name">Nome</h1>
+            <div class="circle-container">
+                <p class="data">Data</p>
+            </div>
+            <h4>Timestamp</h4>
+        </div>
     </div>
-    <div class="first-sensor"></div>
-    <div class="second-sensor"></div>
-    <div class="third-sensor"></div>
-    <div class="forth sensor"></div>
-  </body>
+</body>
 </html>
