Logo icon works as return button to home/menu page

--- a/gps.html
+++ b/gps.html
@@ -19,6 +19,7 @@
             <li><a href="about-us.html">About Us</a></li>
         </ul>
     </nav>
+    <a href="index.html" class="return-button"><img src="./images/Logo_ES.jpeg" alt="Custom icon" class="custom-icon" id="custom-icon"></a>
     <section class="sensor-showcase">
         <h1>GPS</h1>
         <!-- Rest of the content goes here -->
