--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="about-us.html">About Us</a></li>
         </ul>
     </nav>
+    <a href="index.html" class="return-button"><img src="./images/Logo_ES.jpeg" alt="Custom icon" class="custom-icon" id="custom-icon"></a>
     <section class="sensor-showcase">
         <article class="sensor-container">
             <h1 class="sensor-title">Nome</h1>
