Beggining of ABout us Page

--- a/about-us.html
+++ b/about-us.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style_upgrade.css">
-    <script src="./index.js"></script>
-    <title>ES App - About Us</title>
+    <title>About Us - Drone Deployed Micro-Drifter</title>
 </head>
 <body>
+    <img src="./images/menu-icon-mobile-21.jpg" alt="Menu icon" class="burger-button" id="menu-button">
     <nav class="main-menu" id="main-menu">
-        <img src="./images/menu-icon-mobile-21.jpg" alt="Menu icon" class="burger-button" id="menu-button">
         <ul class="menu-list">
             <li><a href="power.html">Power</a></li>
             <li><a href="gps.html">GPS</a></li>
@@ -20,9 +19,59 @@
         </ul>
     </nav>
     <a href="index.html" class="return-button"><img src="./images/Logo_ES.jpeg" alt="Custom icon" class="custom-icon" id="custom-icon"></a>
-    <section class="sensor-showcase">
-        <h1>About Us</h1>
-        <!-- Rest of the content goes here -->
+    <section class="about-section">
+        <div class="intro-section">
+            <h1>About Us</h1>
+            <p>Welcome to our Drone Deployed Micro-Drifter project!</p>
+            <p>We are Team M, a group of 10 members from FEUP (Faculdade de Engenharia da Universidade do Porto). Our goal is to develop a low-cost device capable of deriving on water to measure environmental parameters.</p>
+        </div>
+        <div class="team-members">
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <span>Member 1</span>
+                    <p>123456789</p>
+                </li>
+                <li>
+                    <span>Member 2</span>
+                    <p>987654321</p>
+                </li>
+                <li>
+                    <span>Member 3</span>
+                    <p>456123789</p>
+                </li>
+                <li>
+                    <span>Member 4</span>
+                    <p>789321456</p>
+                </li>
+                <li>
+                    <span>Member 5</span>
+                    <p>321987654</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <span>Member 6</span>
+                    <p>654789123</p>
+                </li>
+                <li>
+                    <span>Member 7</span>
+                    <p>159753468</p>
+                </li>
+                <li>
+                    <span>Member 8</span>
+                    <p>357159246</p>
+                </li>
+                <li>
+                    <span>Member 9</span>
+                    <p>246357159</p>
+                </li>
+                <li>
+                    <span>Member 10</span>
+                    <p>468951237</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <script src="./index.js"></script>
     <script>
