About us Members boxes fixed.

--- a/about-us.html
+++ b/about-us.html
@@ -29,46 +29,44 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <span>Member 1</span>
-                    <p>123456789</p>
+                    <span>Ana Rita Reimão Couto</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 2</span>
-                    <p>987654321</p>
+                    <span>Bruno Eduardo Azevedo Campos</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 3</span>
-                    <p>456123789</p>
+                    <span>Carlos Rúben Silva da Costa</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 4</span>
-                    <p>789321456</p>
+                    <span>Delcio Morais Paulino Pedro</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 5</span>
-                    <p>321987654</p>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span>Member 6</span>
-                    <p>654789123</p>
+                    <span>Diogo Martins Teixeira Lopes Pestana</span>
+                    <p>nº 201904486</p>
                 </li>
                 <li>
-                    <span>Member 7</span>
-                    <p>159753468</p>
+                    <span>Fernando Simão Ferreira da Cunha</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 8</span>
-                    <p>357159246</p>
+                    <span>Hamilton Celerino da Fonseca Neto</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 9</span>
-                    <p>246357159</p>
+                    <span>Maria Teresa Morais Sarmento Lobo dos Santos</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
                 <li>
-                    <span>Member 10</span>
-                    <p>468951237</p>
+                    <span>Nuno Miguel Sá Dias </span>
+                    <p>nº XXXXXXXXX</p>
+                </li>
+                <li>
+                    <span>Pedro Miguel Teixeira Ventura da Silva</span>
+                    <p>nº XXXXXXXXX</p>
                 </li>
             </ul>
         </div>
