--- a/about-us.html
+++ b/about-us.html
@@ -22,8 +22,8 @@
     <section class="about-section">
         <div class="intro-section">
             <h1>About Us</h1>
-            <p>Welcome to our Drone Deployed Micro-Drifter project!</p>
-            <p>We are Team M, a group of 10 members from FEUP (Faculdade de Engenharia da Universidade do Porto). Our goal is to develop a low-cost device capable of deriving on water to measure environmental parameters.</p>
+            <p>Welcome to the Drone Deployed Micro-Drifter project!</p>
+            <p>We are Team M, a group of ten members from FEUP (Faculdade de Engenharia da Universidade do Porto). Our mission is to develop an affordable and innovative device capable of traversing water to collect and analyze environmental data.</p>
         </div>
         <div class="team-members">
             <h2>Our Team</h2>
