--- a/air-temperature.html
+++ b/air-temperature.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style_Sensores.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>ES App</title>
 </head>
 <body>
@@ -29,6 +32,32 @@
         </article>
         <article class="big-container">
             <!-- Add your content for the big container here -->
+            <div class="left-inner-container">
+                <div class="date-container">
+                    <div class="input-date-container">
+                        <h3 class="input-date-label">Start Date</h3>
+                        <input type="datetime-local" class="input-date" id="start-date-input" name="timestampPicker">
+                    </div>
+                    <div class="input-date-container">
+                        <h3 class="input-date-label">End Date</h3>
+                        <input type="datetime-local" class="input-date" id="end-date-input" name="timestampPicker">
+                    </div>
+                </div>
+                <div class="chart-options-buttons">
+                    <button class="chart-button"><a>Chart</a></button>
+                    <button class="Table"><a>Table</a></button>
+                </div>
+                
+                <div class="chart-container">
+                    <canvas id="myChart">
+
+                    </canvas>
+                </div>
+                <img src="./images/csv_button.png" alt="Download csv data button">
+            </div>
+            <div  class="right-inner-container">
+                <div id="map"></div>
+            </div>
         </article>
     </section>
     <script src="./index.js"></script>
@@ -50,5 +79,6 @@
         // Update timestamps every 1 second (1000ms)
         setInterval(updateTimestamps, 1000);
     </script>
+    <script src="sensor.js"></script>
 </body>
 </html>
