main page already assigns cookie value when clicked sensor label

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h4 id="water-tds-timestamp" class="timestamp">Collected at:<br><span id="water-tds-time"></span></h4>
         </article>
     </section>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
     <script>
         
         document.getElementById('menu-button').addEventListener('click', function() {
