Added window location change on sensor label click

--- a/measurements.html
+++ b/measurements.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
     <!-- Include Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <!-- Include Chart.js-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Include the Chart.js date adapter for Moment.js -->
