--- a/measurements.html
+++ b/measurements.html
@@ -36,9 +36,9 @@
             id="custom-icon"></a>
     <section class="sensor-showcase">
         <article class="sensor-container">
-            <h1 class="sensor-title"><a href="air-temperature.html">Air Temperature</a></h1>
+            <h1 class="sensor-title"><a href="air-temperature.html">Sensor-type</a></h1>
             <div class="circle-container">
-                <p class="data">25ºC</p>
+                <p class="data">Sensor-Data</p>
             </div>
             <h4 id="timestamp">Collected at:<br><span id="timestamp-time"></span></h4>
         </article>
