Added csv button and made some logic for sensor name(remove _ and upper)

--- a/measurements.html
+++ b/measurements.html
@@ -65,7 +65,7 @@
 
                     </canvas>
                 </div>
-                <img src="./images/csv_button.png" alt="Download csv data button">
+                <img class="download-csv-button"src="./images/button2_vector.png" alt="Download csv data button" >
             </div>
             <div class="right-inner-container">
                 <div id="map"></div>
