--- a/measurements.html
+++ b/measurements.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="chart-options-buttons">
                     <button class="chart-button"><a>Chart</a></button>
-                    <button class="Table"><a>Table</a></button>
+                    <button class="table-button"><a>Table</a></button>
                 </div>
 
                 <div class="chart-container">
@@ -65,6 +65,9 @@
 
                     </canvas>
                 </div>
+                <div class="table-container" style="display: none;">
+                    <h4>Here is suppose to be a table</h4>
+                  </div>
                 <img class="download-csv-button"src="./images/button2_vector.png" alt="Download csv data button" >
             </div>
             <div class="right-inner-container">
