Made lines more darker in scatter plot

--- a/measurements.html
+++ b/measurements.html
@@ -36,7 +36,7 @@
             id="custom-icon"></a>
     <section class="sensor-showcase">
         <article class="sensor-container">
-            <h1 class="sensor-title"><a href="air-temperature.html">Sensor-type</a></h1>
+            <h1 class="sensor-title"><a href="measurements.html">Sensor-type</a></h1>
             <div class="circle-container">
                 <p class="data">Sensor-Data</p>
             </div>
